Fix website nav on small screens

--- a/website/source/stylesheets/_header.sass
+++ b/website/source/stylesheets/_header.sass
@@ -29,10 +29,7 @@
           margin: 0.25em 0
 
       .actions
-        margin: 1em 0
+        margin: 1em 0 0 0.5em
 
         a
           padding: 0.5em
-
-        a:first-child
-          margin-left: 0.5em
