--- a/website/source/stylesheets/_nav.sass
+++ b/website/source/stylesheets/_nav.sass
@@ -6,6 +6,8 @@ body
     top: 0
     left: 0
     right: 0
+    white-space: nowrap
+    overflow-x: auto
     background: rgba(#fff, 0.95)
     text-align: left
     box-shadow: 0px 0px 10px 10px rgba(#fff, 0.95)
